# CTPSharp

./: .gitignore  CTPSharp.sln  README.md
CTPAPI/: ThostFtdcTraderApi.h  ThostFtdcUserApiStruct.h  error.xml
CTPAPI6.6.9/: error.xml
CTPInvoke/: CMakeLists.txt  CTPInvoke.vcxproj
CTPSharp/: CTPSharp.csproj  ErrorReturn.cs  GBKConvert.cs  MdAPI.cs  MdSPI.cs  PendingRequest.cs  RequestId.cs  StringArray.cs  TdAPI.cs  TdSPI.cs
Example/: Config.cs  Example.csproj  MDClient.cs  Program.cs
Generator/: Program.cs
